// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<div>
  <label
    className="label variant-square label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[MockFunction]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
</div>
`;

exports[`Shallow Snapshot Tests disabled 1`] = `
<div>
  <label
    className="label variant-square label-noimage"
  />
</div>
`;

exports[`Shallow Snapshot Tests icon 1`] = `
<div>
  <label
    className="label variant-icon label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[MockFunction]}
      type="file"
    />
    <div
      className="content content-small"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
    </div>
  </label>
</div>
`;

exports[`Shallow Snapshot Tests with error & helperText 1`] = `
<div>
  <label
    className="label variant-square label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[MockFunction]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <ForwardRef(Typography)
    className="helper-text helper-text-error"
  >
    text
  </ForwardRef(Typography)>
</div>
`;

exports[`Shallow Snapshot Tests with error 1`] = `
<div>
  <label
    className="label variant-square label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[MockFunction]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
</div>
`;

exports[`Shallow Snapshot Tests with helperText 1`] = `
<div>
  <label
    className="label variant-square label-active label-noimage"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[MockFunction]}
      type="file"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
  <ForwardRef(Typography)
    className="helper-text"
  >
    text
  </ForwardRef(Typography)>
</div>
`;

exports[`Shallow Snapshot Tests with src 1`] = `
<div>
  <label
    className="label variant-square label-active"
  >
    <input
      accept="image/*"
      className="input-image"
      onChange={[MockFunction]}
      type="file"
    />
    <img
      className="img variant-square"
      src="https://xxx.image.png"
    />
    <div
      className="content content-large"
    >
      <ForwardRef(Typography)>
        <Memo(ForwardRef(AddAPhotoIcon))
          fontSize="large"
        />
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        タップして写真を追加
      </ForwardRef(Typography)>
    </div>
  </label>
</div>
`;
